# template_cpp

./: .gitignore  .gitmodules  Doxyfile  Makefile  README.md  meson.build
tools/builder/: pyproject.toml  run.sh
tools/builder/src/: build.py
tools/builder/src/builders/: bgfx.py  common.py  fmt.py  glfw3.py  sfml.py  spdlog.py
tools/builder/src/utils/: types.py
